# Codex-OAuth-manager

./: .gitignore  README.md  index.html
native/codexbar-collector/: Cargo.toml
native/codexbar-collector/src/: accounts.rs  lib.rs  main.rs
plasma/local.codexbar.accounts/: metadata.json
plasma/local.codexbar.accounts/contents/config/: config.qml  main.xml
plasma/local.codexbar.accounts/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  UsageBar.qml  main.qml
plasma/local.codexbar.accounts/contents/ui/config/: ConfigGeneral.qml
plasma/local.codexbar.tokens/: metadata.json
plasma/local.codexbar.tokens/contents/config/: main.xml
plasma/local.codexbar.tokens/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  RollingNumber.qml  main.qml
plasma/local.codexbar.tokens/contents/ui/config/: ConfigGeneral.qml
scripts/: codexbar-accounts-plasmoid-bridge.sh  codexbar-plasmoid-bridge.sh  install-codexbar.sh
